# labs_OP_and_OOP

./: .gitignore
Lab_1_OP/: CMakeLists.txt  converter.cpp  converter.h  entry_point.cpp  entry_point.h  errors.h  logic.cpp  mainwindow.cpp  mainwindow.ui  memory_utils.h
Lab_1_OP/headers/: mainwindow.h
Lab_1_OP/source/: errors.cpp
OOP/Lab_1/: lab1_OOP.pro
OOP/Lab_1/headers/: circle.h  figure.h  inputhandler.h  mainwindow.h  outputhandler.h  rectangle.h  shapemanager.h  triangle.h
OOP/Lab_1/source/: circle.cpp  figure.cpp  inputhandler.cpp  main.cpp  mainwindow.cpp  outputhandler.cpp  rectangle.cpp  shapeManager.cpp  triangle.cpp
OOP/Lab_2/: CMakeLists.txt
OOP/Lab_2/headers/: iterator.hpp  set.hpp
OOP/Lab_2/source/: iterator.cpp  main.cpp  set.cpp
OOP/Lab_3/: CMakeLists.txt
OOP/Lab_3/headers/: Command.h  ICommand.h  InputCommand.h  Token.h  calculatorengine.h  calculatorfacade.h  evaluatecommand.h  mainwindow.h  memorycommand.h  tokenizer.h
OOP/Lab_3/source/: Command.cpp  InputCommand.cpp  Token.cpp  calculatorengine.cpp  calculatorfacade.cpp  evaluatecommand.cpp  main.cpp  mainwindow.cpp  memorycommand.cpp  tokenizer.cpp
OP/Lab_1/headers/: appcontext.h  entry_point.h  logic.h
OP/Lab_1/source/: converter.cpp  memory_utils.cpp
OP/Lab_2/: CMakeLists.txt
OP/Lab_2/headers/: arrayutils.h  demodata.h  entrypoint.h  mainwindow.h  operations.h  stringutils.h
OP/Lab_2/source/: arrayutils.cpp  demodata.cpp  entrypoint.cpp  main.cpp  mainwindow.cpp  operations.cpp  stringutils.cpp
OP/Lab_3/: CMakeLists.txt
OP/Lab_3/headers/: chartwidget.h  demodata.h  entrypoint.h  mainwindow.h  metrics.h  operations.h  stringutils.h
OP/Lab_3/source/: chartwidget.cpp  demodata.cpp  entrypoint.cpp  mainwindow.cpp  metrics.cpp  operations.cpp  stringutils.cpp
